--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "helmet": "^3.16.0",
-    "nodemailer": "^5.1.1"
+    "nodemailer": "^5.1.1",
+    "typed.js": "^2.0.10"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
