--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "gsap": "^2.1.2",
     "helmet": "^3.16.0",
     "nodemailer": "^5.1.1",
     "typed.js": "^2.0.10"
