--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^2.1.2",
     "helmet": "^3.16.0",
     "nodemailer": "^5.1.1",
+    "react-scroll": "^1.7.11",
     "typed.js": "^2.0.10"
   },
   "devDependencies": {
