--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -7,6 +7,7 @@
     "gsap": "^2.1.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-loader-spinner": "^2.3.0",
     "react-scripts": "2.1.8",
     "typed.js": "^2.0.10"
   },
